--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "next": "^14.0.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1"
   },
