--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "npx prettier --write .",
     "check": "npx prettier --check .",
     "eslint": "npx eslint . --ext js --ext jsx",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "clean": "rm -rf node_modules"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
