--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
     "next": "^14.0.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.13.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1"
